// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateLineHeight() should extend lineHeightMap 1`] = `
Map {
  12 => 1.6666666667,
  16 => 1.5,
  24 => 1.5,
  36 => 1.3333333333,
  52 => 1.2307692308,
  48 => 1.25,
}
`;

exports[`calculateLineHeight() should not extend lineHeightMap if fontSize already exists 1`] = `
Map {
  12 => 1.6666666667,
  16 => 1.5,
  24 => 1.5,
  36 => 1.3333333333,
  52 => 1.2307692308,
}
`;
